# fastAPI

Inventry-app/: .gitignore  database.py  database_models.py  main.py  models.py  requirements.txt
Inventry-app/frontend/: package-lock.json  package.json
Inventry-app/frontend/public/: index.html
Inventry-app/frontend/src/: App.css  App.js  TaglineSection.css  TaglineSection.js
image_storage/: .gitignore  main.py  pyproject.toml  test.db
image_storage/app/: app.py  db.py  images.py  users.py
image_storage/frontened/: index.html  package.json
image_storage/frontened/src/: App.jsx  AuthContext.jsx  api.js
image_storage/frontened/src/components/: Auth.jsx  Feed.jsx  Navbar.jsx  PostCard.jsx  UploadModal.jsx
miniproject/: .gitignore  main.py
